sass/backend.scss
@import 'variables';

.page-content {
  margin-bottom: 80px;
}
.media-twitter {
  display: table;
}

fieldset.article-teaser .fieldset-wrapper .field--name-field-teaser-text {
  padding: 0 10px;
}

fieldset.article-teaser {
  .field--name-field-teaser-media {
    summary {
      display: none;
    }

    .media-form__item-widget {
      background: $primary-color-lighter;
    }
  }

  .field--name-field-teaser-text {
    textarea {
      height: 114px;
    }
  }

  @include for-tablet-landscape-and-up {
    div.field--widget-entity-browser-entity-reference div.entities-list > div {
      margin: 10px 0;
    }

    .fieldset-wrapper {
      display: flex;

      .field--name-field-teaser-media {
        width: 225px;
        min-width: 225px;
      }

      .field--name-field-teaser-media details.form-wrapper {
        border: 0;
      }

      .field--name-field-teaser-text {
        margin: 0 14px;
      }

      .field--name-field-teaser-text .form-item-field-teaser-text-0-value{
        margin-top: 4px;
      }
    }
  }
}

